--- a/package.json
+++ b/package.json
@@ -13,11 +13,16 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.13",
+    "@mui/lab": "^5.0.0-alpha.148",
     "@mui/material": "^5.14.13",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.1",
+    "@mui/x-date-pickers": "^6.16.2",
     "ag-grid-community": "^30.2.0",
     "ag-grid-react": "^30.2.0",
+    "dayjs": "^1.11.10",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "styled-components": "^6.0.9"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
